@@ -1,3 +1,7 @@
+* Mar 9 2001 hship
+
+Adjust for CVS tree reorganization.  Start preparing for release 0.2.10.
+
 * Feb 13 2001 hship
 
 Replace old DevelopersGuide (in PDF format) with new DocBook-derived HTML.
